--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
         "webpack-dev-server": "2.4.1",
         "webpack-parallel-uglify-plugin": "0.4.0"
     },
-    "//": "replace react-sortable-items with official on npm when 0.0.10 with remove_deprecated PR in included",
+  "//": "replace react-sortable-items with official on npm when it will support React 15",
     "dependencies": {
         "@carnesen/redux-add-action-listener-enhancer": "0.0.1",
         "@turf/inside": "4.1.0",
@@ -97,6 +97,7 @@
         "html2canvas": "0.5.0-beta4",
         "intl": "1.2.2",
         "ismobilejs": "0.4.0",
+    "jsesc": "1.3.0",
         "json-loader": "0.5.4",
         "jsonix": "2.4.1",
         "keymirror": "0.1.1",
@@ -132,6 +133,7 @@
         "react-input-autosize": "1.1.0",
         "react-intl": "2.2.3",
         "react-joyride": "1.10.1",
+    "react-notification-system": "0.2.14",
         "react-nouislider": "1.11.0",
         "react-overlays": "0.6.3",
         "react-pdf": "1.6.1",
@@ -154,7 +156,6 @@
         "redux": "3.6.0",
         "redux-logger": "2.6.1",
         "redux-observable": "0.13.0",
-        "redux-persist": "3.1.1",
         "redux-thunk": "0.1.0",
         "redux-undo": "0.5.0",
         "reselect": "2.5.1",
